// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvmAccountSelectorList renders all accounts with balances 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      collapsable={false}
      getItemType={[Function]}
      handlerTag={2}
      handlerType="NativeViewGestureHandler"
      keyExtractor={[Function]}
      maintainVisibleContentPosition={
        {
          "minIndexForVisible": 0,
        }
      }
      onContentSizeChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onScroll={[Function]}
      testID="account-selector-list"
    >
      <View>
        <View
          style={
            {
              "height": 0,
              "left": 0,
              "position": "absolute",
              "top": 1000000,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "width": undefined,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "marginLeft": undefined,
              "marginTop": 0,
              "opacity": 1,
              "width": undefined,
            }
          }
        >
          <View
            index={0}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 1
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xC4955...4D272
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $3200.00
                          </Text>
                          <View
                            style={
                              {
                                "marginTop": 4,
                              }
                            }
                            testID="network-container"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                              testID="avatar-group-container"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
          <View
            index={1}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 2
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xd0185...a78E7
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $6400.00
                          </Text>
                          <View
                            style={
                              {
                                "marginTop": 4,
                              }
                            }
                            testID="network-container"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                              testID="avatar-group-container"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`EvmAccountSelectorList renders all accounts with right accessory 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      collapsable={false}
      getItemType={[Function]}
      handlerTag={3}
      handlerType="NativeViewGestureHandler"
      keyExtractor={[Function]}
      maintainVisibleContentPosition={
        {
          "minIndexForVisible": 0,
        }
      }
      onContentSizeChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onScroll={[Function]}
      testID="account-selector-list"
    >
      <View>
        <View
          style={
            {
              "height": 0,
              "left": 0,
              "position": "absolute",
              "top": 1000000,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "width": undefined,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "marginLeft": undefined,
              "marginTop": 0,
              "opacity": 1,
              "width": undefined,
            }
          }
        >
          <View
            index={0}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                disabled={true}
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 1
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xC4955...4D272
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          testID="right-accessory"
                        >
                          0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272 - Account 1
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
          <View
            index={1}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                disabled={true}
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 2
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xd0185...a78E7
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          testID="right-accessory"
                        >
                          0xd018538C87232FF95acbCe4870629b75640a78E7 - Account 2
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`EvmAccountSelectorList renders correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      collapsable={false}
      getItemType={[Function]}
      handlerTag={1}
      handlerType="NativeViewGestureHandler"
      keyExtractor={[Function]}
      maintainVisibleContentPosition={
        {
          "minIndexForVisible": 0,
        }
      }
      onContentSizeChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onScroll={[Function]}
      testID="account-selector-list"
    >
      <View>
        <View
          style={
            {
              "height": 0,
              "left": 0,
              "position": "absolute",
              "top": 1000000,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "width": undefined,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "marginLeft": undefined,
              "marginTop": 0,
              "opacity": 1,
              "width": undefined,
            }
          }
        >
          <View
            index={0}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 1
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xC4955...4D272
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $3200.00
                          </Text>
                          <View
                            style={
                              {
                                "marginTop": 4,
                              }
                            }
                            testID="network-container"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                              testID="avatar-group-container"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
          <View
            index={1}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 2
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xd0185...a78E7
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $6400.00
                          </Text>
                          <View
                            style={
                              {
                                "marginTop": 4,
                              }
                            }
                            testID="network-container"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                              testID="avatar-group-container"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`EvmAccountSelectorList renders network icons for accounts with transaction activity 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RCTScrollView
      collapsable={false}
      getItemType={[Function]}
      handlerTag={24}
      handlerType="NativeViewGestureHandler"
      keyExtractor={[Function]}
      maintainVisibleContentPosition={
        {
          "minIndexForVisible": 0,
        }
      }
      onContentSizeChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onScroll={[Function]}
      testID="account-selector-list"
    >
      <View>
        <View
          style={
            {
              "height": 0,
              "left": 0,
              "position": "absolute",
              "top": 1000000,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "width": undefined,
            }
          }
        />
        <View
          style={
            {
              "height": 0,
              "marginLeft": undefined,
              "marginTop": 0,
              "opacity": 1,
              "width": undefined,
            }
          }
        >
          <View
            index={0}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 1
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xC4955...4D272
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $3200.00
                          </Text>
                          <View
                            style={
                              {
                                "marginTop": 4,
                              }
                            }
                            testID="network-container"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                              testID="avatar-group-container"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
          <View
            index={1}
            onLayout={[Function]}
            style={
              {
                "flexDirection": "column",
                "height": undefined,
                "left": 0,
                "maxHeight": undefined,
                "maxWidth": undefined,
                "minHeight": undefined,
                "minWidth": undefined,
                "position": "absolute",
                "top": 0,
                "width": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                onLongPress={[Function]}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "opacity": 1,
                    "padding": 16,
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
                testID="select-with-menu"
              >
                <View
                  accessibilityRole="none"
                  accessible={true}
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexDirection": "column",
                      "padding": 16,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "zIndex": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 8,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <View
                          style={
                            {
                              "height": 32,
                              "width": 32,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        >
                          Account 2
                        </Text>
                        <View
                          style={
                            {
                              "alignItems": "flex-start",
                              "flexDirection": "row",
                              "marginBottom": 0,
                              "zIndex": 1,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0xd0185...a78E7
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $6400.00
                          </Text>
                          <View
                            style={
                              {
                                "marginTop": 4,
                              }
                            }
                            testID="network-container"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                              testID="avatar-group-container"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </TouchableOpacity>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 28,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 28,
                    }
                  }
                  testID="multichain-account-cell-menu"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="MoreVertical"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
